--- a/nginx/test.conf
+++ b/nginx/test.conf
@@ -7,7 +7,7 @@ server {
 
         charset utf-8;
         access_log /var/log/nginx/test.vn/access.log;
-	error_log /var/log/nginx/test/error.log;	
+	error_log /var/log/nginx/test.vn/error.log;
        
 	 location / {
             try_files $uri /index.php$is_args$args;
